List item leave and checked animations with promises  * list item directive optionally requires list directive  * register and unregister editor closed callback when list item is opened in editor  * removed data binding from task checkbox and call taskChecked in editor to update correct values into list  * added initial max-height to .animate-list-item-leave to make max-height animation working in iOS.  * use track by in list item ng-repeat  * fool UI with programmatically set class in leave item promise to display checkbox as checked when returning from editor where item checkbox was checked  * checkbox checked with animation

--- a/frontend/core/src/main/webapp/static/app/base/listItem.html
+++ b/frontend/core/src/main/webapp/static/app/base/listItem.html
@@ -1,10 +1,10 @@
 <div class="group-mixed">
 
   <div ng-if="leftAction" class="group-mixed--left">
-    <input ng-if="leftActionType === 'checkbox'" type="checkbox" ng-checked="leftActionChecked" swiper-click="leftAction()" ng-class="leftActionClass" icon-checkbox="{{item.uuid}}">
+    <input ng-if="leftActionType === 'checkbox'" type="checkbox" ng-checked="leftActionChecked" swiper-click="callLeftAction()" ng-class="leftActionClass" icon-checkbox="{{item.uuid}}">
   </div>
 
-  <a href class="group-mixed--middle" swiper-click="itemAction()">
+  <a href class="group-mixed--middle" swiper-click="callItemAction()">
     <span class="text-link" ng-bind="item.title"></span>
   </a>
 
