--- a/frontend/core/src/main/webapp/static/app/tasks/recent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/recent.html
@@ -4,7 +4,7 @@
       <h2>recent</h2>
       <div ng-include="'static/app/tasks/addTask.html'"></div>
 
-      <div class="row" ng-repeat="task in tasks | filter:{completed: '!'} | orderBy:'modified':true" list-item="task" list-item-action="setItemAnimationActiveAndCall(task, editTask)" list-item-left-action="taskChecked(task)" list-item-left-action-type="checkbox" list-item-left-action-checked="task.completed" ng-class="isAnimationActive() && 'animate-list-item-leave'"></div>
+      <div class="row" ng-repeat="task in tasks | filter:{completed: '!'} | orderBy:'modified':true track by task.uuid" list-item="task" list-item-action="editTask(task)" list-item-left-action="taskChecked(task)" list-item-left-action-type="checkbox" list-item-left-action-checked="task.completed" ng-class="isAnimationActive() && 'animate-list-item-leave'"></div>
 
     </div>
   </section>
