Rudimentary swipe from left to right close editor:  * register editor to Snap.js and use it as a dragger element  * removed data-snap-ignore HTML attribute from editor

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -50,6 +50,7 @@
   <script src="static/common/listsSelectOptionsDirective.js"></script>
   <script src="static/common/optionsDisabledDirective.js"></script>
   <script src="static/common/passwordMatchDirective.js"></script>
+  <script src="static/common/snap.js"></script>
   <script src="static/common/swiper.js"></script>
 
   <script src="static/app/app.js"></script>
@@ -80,6 +81,7 @@
   <script src="static/app/base/drawerAisleDirective.js"></script>
   <script src="static/app/base/drawerDirective.js"></script>
   <script src="static/app/base/drawerHandleDirective.js"></script>
+  <script src="static/app/base/drawerOverrideAisleDirective.js"></script>
   <script src="static/app/base/itemCoreFieldsDirective.js"></script>
   <script src="static/app/base/listDirective.js"></script>
   <script src="static/app/base/listItemDirective.js"></script>
@@ -140,7 +142,6 @@
 
   <script src="static/app/root/rootViewDirective.js"></script>
 
-  <script src="static/lib/snap.js"></script>
   <script src="static/lib/fastclick.js"></script>
   <script src="static/lib/pikaday.js"></script>
 
