--- a/frontend/core/src/main/webapp/static/app/tasks/contexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/contexts.html
@@ -37,4 +37,4 @@
     </a>
   </h3>
 </section>
-<footer class="container-content--after">contexts</footer>
+<footer class="container-content--after" master-footer="getFeatureMap('tasks')" master-footer-add-item="addContext({})"></footer>
