--- a/frontend/core/src/main/webapp/static/app/tasks/recent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/recent.html
@@ -8,5 +8,5 @@
 
     </div>
   </section>
-  <footer class="container-content--after">recent tasks</footer>
+  <footer class="container-content--after" master-footer="getFeatureMap('tasks')" master-footer-add-item="addTask({})"></footer>
 </div>
