--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -1,16 +1,16 @@
 <header class="container-toolbar">
   <div class="container-toolbar--inner">
-    <nav class="group-mixed swiper-no-swiping" role="navigation" ng-controller="HeaderController">
-      <div class="group-mixed--left">
+    <nav class="group-symmetrical swiper-no-swiping" role="navigation" ng-controller="HeaderController">
+      <div class="group-symmetrical--left">
         <button ng-if="!isDatepickerVisible" type="button" id="menu-button" ng-click="toggleMenu()" alt="menu" ng-disabled="onboardingInProgress">
           <span class="icon-menu"></span>
         </button>
         <a href ng-if="isDatepickerVisible" id="today-link" ng-class="{'today-link-active': isTodayActive}">today</a>
       </div>
-      <div class="group-mixed--middle" ng-class="getHeadingClass()">
+      <div class="group-symmetrical--middle" ng-class="getHeadingClass()">
         <a href class="heading" ng-click="switchFeature()" ng-bind="getCurrentHeading()"></a>
       </div>
-      <div class="group-mixed--right">
+      <div class="group-symmetrical--right">
         <a href class="omni-button" ng-click="openEditor()">
           <span class="icon-logo-only"></span>
         </a>
