--- a/frontend/core/src/main/webapp/static/app/entry/entry.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entry.html
@@ -22,6 +22,10 @@
         </div>
         <div class="swiper-slide" swiper-slide="entry/main" slide-index=1>
           <div ng-if="entryState === 'signup'" class="container-content">
+            <header class="group-symmetrical">
+              <a href ng-click="swipeToHome()"><span class="link-navigation-back">back</span></a>
+            </header>
+            <h1>sign up</h1>
             <form role="form" name="signupForm">
               <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email..." required />
               <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password..." required />
@@ -41,15 +45,19 @@
               </div>
             </div>
           </div>
-          <footer class="container-content--after group-navigation row">
-            <div class="group-btn row">
+          <footer ng-if="entryState === 'signup'" class="container-content--after">
+            <div class="group-btn">
               <button type="submit" class="btn-action" ng-disabled="!signupForm.$valid || !user.agree" ng-click="signUp()">
                 <span class="text-btn">sign up</span>
               </button>
             </div>
-            <a href ng-click="swipeToHome()"><span class="link-navigation-back"/>back</a>
           </footer>
           <div ng-if="entryState === 'login'" class="container-content">
+            <header class="group-symmetrical row" >
+              <a href ng-click="swipeToHome()" class="link-navigation-back">back</a>
+              <a href ng-click="swipeToForgot()" class="link-navigation-forward group-symmetrical--right">forgot?</a>
+            </header>
+            <h1>log in</h1>
             <form role="form" name="loginForm">
               <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email..." required />
               <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password..." required />
@@ -59,7 +67,7 @@
                 </div>
                 <span class="group-mixed--middle">remember</span>
               </div>
-              <div class="group-btn row">
+              <div class="group-btn">
                 <button type="submit" class="btn-action" ng-disabled="!loginForm.$valid" ng-click="logIn()">
                   <span class="text-btn">log in</span>
                 </button>
@@ -76,19 +84,16 @@
               <span ng-if="loginOffline" class="text-error">can't connect to server. are you online?</span>
             </div>
           </div>
-          <footer class="container-content--after group-navigation row" >
-            <a href ng-click="swipeToHome()" class="link-navigation-back">back</a>
-            <a href ng-click="swipeToForgot()" class="link-navigation-forward">forgot?</a>
-          </footer>
         </div>
         <div ng-if="entryState === 'login'" class="swiper-slide" swiper-slide="entry/details" slide-index=2>
           <div class="container-content">
-            <div class="group-instruction row">
-              <p>reset password?</p>
-            </div>
+            <header class="group-symmetrical row">
+              <a href ng-click="swipeToMain()"><span class="link-navigation-back">back</span></a>
+            </header>
+            <h1>reset password?</h1>
             <form role="form" name="forgotForm">
               <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email..." required />
-              <div class="group-btn row">
+              <div class="group-btn">
                 <button type="submit" class="btn-action" ng-disabled="!forgotForm.$valid" ng-click="sendInstructions()">
                   <span class="text-btn">send</span>
                 </button>
@@ -102,9 +107,6 @@
               <span ng-if="sendOffline" class="text-error">can't connect to server. are you online?</span>
             </div>
           </div>
-          <footer class="container-content--after group-navigation row">
-            <a href ng-click="swipeToMain()"><span class="link-navigation-back"/>back</a>
-          </footer>
         </div>
       </div>
     </div>
