--- a/frontend/core/src/main/webapp/static/app/main/masterFooter.html
+++ b/frontend/core/src/main/webapp/static/app/main/masterFooter.html
@@ -1,13 +1,13 @@
-<nav role="navigation" class="swiper-no-swiping group-mixed">
-  <div ng-if="leftNavigationText" class="group-mixed--left">
-    <a href ng-click="navigationAction(leftNavigationActionParameter)" ng-bind="leftNavigationText"></a>
-  </div>
-
-  <a href class="group-mixed--middle" ng-click="addItemFn()">
-    <span class="text-link">+</span>
+<nav role="navigation" class="swiper-no-swiping group-symmetrical">
+  <a href ng-if="leftNavigationText" ng-click="navigationAction(leftNavigationActionParameter)" class="group-symmetrical--left">
+    <span class="link-navigation-back" ng-bind="leftNavigationText"></span>
   </a>
 
-  <div ng-if="rightNavigationText" class="group-mixed--right">
-    <a href ng-click="navigationAction(rightNavigationActionParameter)" ng-bind="rightNavigationText"></a>
-  </div>
+  <a href class="group-symmetrical--middle" ng-click="addItemFn()">
+    <span>+</span>
+  </a>
+
+  <a href ng-if="rightNavigationText" class="group-symmetrical--right" ng-click="navigationAction(rightNavigationActionParameter)">
+    <span class="link-navigation-forward" ng-bind="rightNavigationText"></span>
+  </a>
 </nav>
