--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -11,7 +11,7 @@
         <a href class="heading" ng-click="switchFeature()" ng-bind="getCurrentHeading()"></a>
       </div>
       <div class="group-symmetrical--right">
-        <a href class="omni-button" ng-click="openEditor()">
+        <a href class="omni-button" ng-click="openEditor('omnibar')">
           <span class="icon-logo-only"></span>
         </a>
       </div>
