Footer works for context

--- a/frontend/core/src/main/webapp/static/app/tasks/contexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/contexts.html
@@ -22,18 +22,8 @@
     </li>
   </ul>
   <h3 class="arrow-link">
-    <a href class="click-to-slide" swiper-click="showNoContextDetails()">
+    <a href class="click-to-slide" swiper-click="swipeToContext()">
       <span class="link-title">no context</span><span class="icon-arrow-right"></span>
-    </a>
-  </h3>
-  <h3 class="arrow-link">
-    <a href class="click-to-slide" swiper-click="showNoListTasksDetails()">
-      <span class="link-title">no list</span><span class="icon-arrow-right"></span>
-    </a>
-  </h3>
-  <h3 class="arrow-link">
-    <a href class="click-to-slide" swiper-click="showNoDateTasksDetails()">
-      <span class="link-title">no date</span><span class="icon-arrow-right"></span>
     </a>
   </h3>
 </section>
