Started implementing notifications:  * notifications are delayed or shown right away  * register notifications active callback to toaster directive  * activate delayed notifications when list item leave animation is fulfilled

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -87,6 +87,7 @@
   <script src="static/app/base/listItemDirective.js"></script>
   <script src="static/app/base/registerElementToFeatureDirective.js"></script>
   <script src="static/app/base/scrollToDirective.js"></script>
+  <script src="static/app/base/toasterDirective.js"></script>
   <script src="static/app/base/swiperContainerDirective.js"></script>
   <script src="static/app/base/swiperPreventDirective.js"></script>
   <script src="static/app/base/swiperSlideDirective.js"></script>
