--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -101,10 +101,7 @@
     </div>
 
   </div>
-  <!-- TODO: Toaster here -->
-  <!--div class="container-toaster">
-    <span class="text-toaster">editor toaster</span>
-  </div-->
+  <div toaster="secondary"></div>
 </div>
 
 
