--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -2,7 +2,7 @@
   <div id="menu-content" class="swiper-no-swiping">
     <ul>
       <li class="account-link">
-        <a href ng-class="getFeatureClass('account')" ng-click="gotoFeature('account')">{{getActiveOwnerName()}}</a>
+        <a href ng-class="getFeatureClass('user')" ng-click="gotoFeature('user')">{{getActiveOwnerName()}}</a>
       </li>
       <li>
         <a href class="feature-link" ng-class="getFeatureClass('focus')" ng-click="gotoFeature('focus')">focus</a>
