--- a/frontend/core/src/main/webapp/static/app/tasks/recent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/recent.html
@@ -1,6 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" drawer-handle="left">
   <section class="container-content" scroll-to>
-    <div list="tasks">
+    <div list>
       <h2>recent</h2>
       <div ng-include="'static/app/tasks/addTask.html'"></div>
 
