--- a/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
@@ -1,4 +1,4 @@
-<section class="container-content">
+<section class="container-content" list>
   <h2>favorite</h2>
   <div class="row" ng-repeat="note in notes" list-item="note" list-item-has-checkbox="false"></div>
 </section>
