--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -56,7 +56,7 @@
       <div class="swiper-wrapper">
 
         <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="0">
-          <div class="container-content">
+          <div class="container-content" list>
             <h1>{{daySlides[2].info}}</h1>
             <div ng-repeat="task in tasks | tasksByDate:daySlides[2].info" list-item="task" list-item-has-checkbox="true">
               {{task.title}}
@@ -65,7 +65,7 @@
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="1">
-          <div class="container-content">
+          <div class="container-content" list>
             <h1>{{daySlides[0].info}}</h1>
             <div ng-repeat="task in tasks | tasksByDate:daySlides[0].info" list-item="task" list-item-has-checkbox="true">
               {{task.title}}
@@ -74,7 +74,7 @@
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/middle" slide-index="2">
-          <div class="container-content">
+          <div class="container-content" list>
             <h1>{{daySlides[1].info}}</h1>
             <div ng-repeat="task in tasks | tasksByDate:daySlides[1].info" list-item="task" list-item-has-checkbox="true">
               {{task.title}}
@@ -83,7 +83,7 @@
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="3">
-          <div class="container-content">
+          <div class="container-content" list>
             <h1>{{daySlides[2].info}}</h1>
             <div ng-repeat="task in tasks | tasksByDate:daySlides[2].info" list-item="task" list-item-has-checkbox="true">
               {{task.title}}
@@ -92,7 +92,7 @@
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="4">
-          <div class="container-content">
+          <div class="container-content" list>
             <h1>{{daySlides[0].info}}</h1>
             <div ng-repeat="task in tasks | tasksByDate:daySlides[0].info" list-item="task" list-item-has-checkbox="true">
               {{task.title}}
