--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -10,8 +10,8 @@
         <div ng-if="isFeatureLoaded('inbox')" ng-include="'static/app/main/inbox.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('tasks')" ng-include="'static/app/tasks/tasksSlides.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('notes')" ng-include="'static/app/notes/notesSlides.html'" include-replace></div>
-        <div ng-if="isFeatureLoaded('lists')" ng-include="'static/app/base/lists.html'" include-replace></div>
-        <div ng-if="isFeatureLoaded('list')" ng-include="'static/app/main/listSlides.html'" include-replace></div>
+        <div ng-if="isFeatureLoaded('lists')" ng-include="'static/app/lists/listsSlides.html'" include-replace></div>
+        <div ng-if="isFeatureLoaded('list')" ng-include="'static/app/lists/listSlides.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('admin')" ng-include="'static/app/admin/admin.html'" include-replace></div>
       </div>
       <div toaster="primary"></div>
