--- a/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
@@ -1,7 +1,11 @@
-<div ng-show="isFeatureActive('tasks')" class="swiper-container container-fluid--inner" swiper-container="tasks" swiper-type="main" expected-slides= 3>
+<div ng-show="isFeatureActive('tasks')" class="swiper-container container-fluid--inner"
+swiper-container="tasks" swiper-type="main" expected-slides= 3>
   <div class="swiper-wrapper">
-    <div class="swiper-slide" swiper-slide="tasks/recent" slide-index=0 ng-include="'static/app/tasks/recent.html'"></div>
-    <div class="swiper-slide" swiper-slide="tasks/contexts" slide-index=1 ng-include="'static/app/tasks/contexts.html'"></div>
-    <div class="swiper-slide" swiper-slide="tasks/context" slide-index=2 ng-include="'static/app/tasks/context.html'"></div>
+    <div class="swiper-slide" swiper-slide="tasks/recent" slide-index=0
+    ng-include="'static/app/tasks/tasksRecent.html'"></div>
+    <div class="swiper-slide" swiper-slide="tasks/contexts" slide-index=1
+    ng-include="'static/app/tasks/tasksContexts.html'"></div>
+    <div class="swiper-slide" swiper-slide="tasks/context" slide-index=2
+    ng-include="'static/app/tasks/tasksContext.html'"></div>
   </div>
 </div>
