--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -7,9 +7,9 @@
         <div ng-include="'static/app/main/toolbar.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('user')" ng-include="'static/app/user/userSlides.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('focus')" ng-include="'static/app/focus/focusSlides.html'" include-replace></div>
-        <div ng-if="isFeatureLoaded('inbox')" ng-include="'static/app/main/inbox.html'" include-replace></div>
+        <div ng-if="isFeatureActive('inbox')" class="container-fluid--inner" ng-include="'static/app/main/inbox.html'" ng-controller="InboxController"></div>
         <div ng-if="isFeatureLoaded('tasks')" ng-include="'static/app/tasks/tasksSlides.html'" include-replace></div>
-        <div ng-if="isFeatureLoaded('notes')" ng-include="'static/app/notes/notesSlides.html'" include-replace></div>
+        <div ng-if="isFeatureActive('notes')" class="container-fluid--inner" ng-include="'static/app/notes/notesRecent.html'"></div>
         <div ng-if="isFeatureLoaded('lists')" ng-include="'static/app/lists/listsSlides.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('list')" ng-include="'static/app/lists/listSlides.html'" include-replace></div>
         <div ng-if="isFeatureLoaded('admin')" ng-include="'static/app/admin/admin.html'" include-replace></div>
