--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -2,17 +2,17 @@
   <div class="container-toolbar--inner">
     <nav class="group-symmetrical swiper-no-swiping" role="navigation">
       <div class="group-symmetrical--left">
-        <button ng-if="!isDatepickerVisible" type="button" id="menu-button" ng-click="toggleMenu()" alt="menu">
-          <span class="icon-menu"></span>
+        <button ng-if="!isDatepickerVisible" type="button" ng-click="toggleMenu()" alt="menu">
+          <span class="text-menu"></span>
         </button>
-        <a href ng-if="isDatepickerVisible" id="today-link" ng-class="{'today-link-active': isTodayActive}">today</a>
+        <a href ng-if="isDatepickerVisible" id="todayLink" ng-class="{'link-highlighted': !isTodayActive}">today</a>
       </div>
       <div class="group-symmetrical--middle" ng-class="getHeadingClass()">
         <a href class="heading" ng-click="switchFeature()" ng-bind="getCurrentHeading()"></a>
       </div>
       <div class="group-symmetrical--right">
         <a href class="omni-button" ng-click="openEditor('omnibar')">
-          <span class="icon-logo-only"></span>
+          <span class="text-logo"></span>
         </a>
       </div>
     </nav>
