--- a/frontend/core/src/main/webapp/static/app/base/toaster.html
+++ b/frontend/core/src/main/webapp/static/app/base/toaster.html
@@ -1,3 +1,3 @@
-<div ng-if="notifications" class="container-toaster">
-  <span class="text-toaster">{{toasterType}}</span>
+<div ng-if="toasterNotifications" class="container-toaster animate-toaster">
+  <span class="text-toaster">{{notification}}</span>
 </div>
