Refactored entry pages. TODO: AutenticationService needs clean up

--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -1,16 +1,27 @@
-<section class="container-content">
-  <div class="group-instruction-jumbotron row">
-    <p class="group-instruction--header"><span class="text-logo"></span></p>
-    <p class="group-instruction--main"><span class="text-active">extend</span><br/>your<br/>biological<br/>mind</p>
-  </div>
-</section>
-<footer class="container-content--after">
-  <div class="group-btn">
-    <button class="btn-action" ng-click="swipeToSignup()">
-      <span class="text-btn">sign up</span>
-    </button>
-    <button class="btn-action" ng-click="swipeToLogin()">
-      <span class="text-btn">log in</span>
-    </button>
-  </div>
-</footer>
+<div ng-if="entryState !== 'download'">
+  <section class="container-content">
+    <div class="group-instruction-jumbotron row">
+      <p class="group-instruction--header"><span class="text-logo"></span></p>
+      <p class="group-instruction--main"><span class="text-active">extend</span><br/>your<br/>biological<br/>mind</p>
+    </div>
+  </section>
+  <footer class="container-content--after">
+    <div class="group-btn">
+      <button class="btn-action" ng-click="swipeToSignup()">
+        <span class="text-btn">sign up</span>
+      </button>
+      <button class="btn-action" ng-click="swipeToLogin()">
+        <span class="text-btn">log in</span>
+      </button>
+    </div>
+  </footer>
+</div>
+<div ng-if="entryState === 'download'">
+  <section class="container-content">
+    <h1>download the app</h1>
+    <h3>to access your extended mind with a phone or tablet, please download our mobile app</h3>
+    <div id="welcome-store-buttons">
+      <a href onClick="window.open('http://itunes.com/apps/extendedmind', '_system_')"><img src="/static/img/appstore.png" style="width: 120px;"/><a>&nbsp; &nbsp;<a href onClick="window.open('https://play.google.com/store/apps/details?id=org.extendedmind', '_system_')"><img src="/static/img/playstore.png" style="width: 120px;"/><a>
+    </div>
+  </section>
+</div>
