--- a/frontend/core/src/main/webapp/static/app/entry/entryForgot.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryForgot.html
@@ -1,23 +1,21 @@
-<section class="container-content">
-  <header class="group-symmetrical row">
-    <a href ng-click="swipeToMain()"><span class="link-navigation-back">back</span></a>
-  </header>
-  <h1>forgot password?</h1>
-  <form role="form" name="forgotForm">
-    <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email..." required />
-    <div class="group-btn">
+<form name="forgotForm">
+  <section class="container-content">
+    <header class="group-symmetrical row">
+      <a href ng-click="swipeToMain()"><span class="link-navigation-back">back</span></a>
+    </header>
+    <h1>forgot password?</h1>
+    <input class="row" type="email" name="email" ng-model="user.email" placeholder="enter email..." required />
+    <div class="group-error row">
+      <div ng-if="forgotForm.email.$touched" ng-messages="forgotForm.email.$error">
+        <span class="text-error" ng-message="email">invalid email address</span>
+      </div>
+      <span ng-if="sendFailed" class="text-error">you are not an extended mind user</span>
+      <span ng-if="entryOffline" class="text-error">can't connect to server. are you online?</span>
     </div>
-  </form>
-  <div class="group-error row">
-    <div ng-if="forgotForm.email.$touched" ng-messages="forgotForm.email.$error">
-      <span class="text-error" ng-message="email">invalid email address</span>
-    </div>
-    <span ng-if="sendFailed" class="text-error">you are not an extended mind user</span>
-    <span ng-if="sendOffline" class="text-error">can't connect to server. are you online?</span>
-  </div>
-</section>
-<footer class="container-content--after group-btn">
-  <button type="submit" class="btn-action" ng-disabled="!forgotForm.$valid" ng-click="sendInstructions()">
-    <span class="text-btn">send</span>
-  </button>
-</footer>
+  </section>
+  <footer class="container-content--after group-btn">
+    <button type="submit" class="btn-action" ng-disabled="!forgotForm.$valid" ng-click="sendInstructions()">
+      <span class="text-btn">send instructions</span>
+    </button>
+  </footer>
+</form>
