--- a/frontend/core/src/main/webapp/static/app/base/toaster.html
+++ b/frontend/core/src/main/webapp/static/app/base/toaster.html
@@ -1,3 +1,6 @@
-<div ng-if="toasterNotifications" class="container-toaster animate-toaster">
-  <span class="text-toaster">{{notification}}</span>
+<div ng-if="toasterNotifications" ng-switch on="notification.type" class="container-toaster animate-toaster">
+  <span ng-switch-when="deleted" class="text-toaster">
+    {{notification.itemType}} deleted, <a href ng-click="closeNotificationAndCall(notification, notification.item, notification.undoFn)">undo?</a>
+  </span>
+  <a href ng-click="closeNotificationAndCall(notification)">close</a>
 </div>
