Re-added fork to Pikaday to fix incompatibility with Fastclick.js in iOS, see 9330e10df3d0cfc153a7624a49c690b9c987bf9f. Moved pikaday.js from lib to common.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -50,6 +50,7 @@
   <script src="static/common/listsSelectOptionsDirective.js"></script>
   <script src="static/common/optionsDisabledDirective.js"></script>
   <script src="static/common/passwordMatchDirective.js"></script>
+  <script src="static/common/pikaday.js"></script>
   <script src="static/common/snap.js"></script>
   <script src="static/common/swiper.js"></script>
 
@@ -126,7 +127,6 @@
   <script src="static/app/root/rootViewDirective.js"></script>
 
   <script src="static/lib/fastclick.js"></script>
-  <script src="static/lib/pikaday.js"></script>
 
   <script src="test/AppTest.js"></script>
   <script src="test/mock/MockBackendService.js"></script>
